// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select disabled select has a different style 1`] = `
.c3 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  width: 100%;
}

.c8 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  list-style-type: none;
  margin: 0;
  max-height: 8rem;
  overflow-y: auto;
  padding: 0;
  position: relative;
  width: 100%;
  z-index: 1000;
}

.c8:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgb(0 0 0 / 19%);
  outline: none;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: 1.43;
  padding: 6px 8px 6px var(--spacing-4x);
}

.c9:hover {
  background-color: #DBDEE1;
}

.c9:focus:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c1 {
  position: relative;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: default;
}

.c4 svg {
  color: #B7BBC2;
}

.c5 {
  background-color: #F1F2F2;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c5:hover {
  cursor: default;
}

.c5::-webkit-input-placeholder {
  color: #B7BBC2;
  font-size: 0.875rem;
}

.c5::-moz-placeholder {
  color: #B7BBC2;
  font-size: 0.875rem;
}

.c5:-ms-input-placeholder {
  color: #B7BBC2;
  font-size: 0.875rem;
}

.c5::placeholder {
  color: #B7BBC2;
  font-size: 0.875rem;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
  >
    Select an option
  </label>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="listbox_undefined"
    class="c4"
    data-testid="input-wrapper"
    disabled=""
  >
    <input
      aria-autocomplete="list"
      aria-controls="listbox_undefined"
      aria-label="Select an option"
      aria-multiline="false"
      class="c5"
      data-testid="input"
      disabled=""
      type="text"
      value=""
    />
    <button
      class="c6"
      data-testid="arrow"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
    </button>
  </div>
  <div
    aria-multiselectable="false"
    class="c7"
    role="listbox"
    tabindex="-1"
  >
    <ul
      class="c8"
      data-testid="listbox-list"
      id="listbox_undefined"
      role="presentation"
      tabindex="0"
    >
      <li
        aria-label="Ontario"
        aria-selected="false"
        class="c9"
        data-testid="listitem-on"
        id="listbox_undefined_on"
        role="option"
        tabindex="-1"
      >
        Ontario
      </li>
      <li
        aria-label="Quebec"
        aria-selected="false"
        class="c9"
        data-testid="listitem-qc"
        id="listbox_undefined_qc"
        role="option"
        tabindex="-1"
      >
        Quebec
      </li>
      <li
        aria-label="British Columbia"
        aria-selected="false"
        class="c9"
        data-testid="listitem-bc"
        id="listbox_undefined_bc"
        role="option"
        tabindex="-1"
      >
        British Columbia
      </li>
      <li
        aria-label="Alberta"
        aria-selected="false"
        class="c9"
        data-testid="listitem-ab"
        id="listbox_undefined_ab"
        role="option"
        tabindex="-1"
      >
        Alberta
      </li>
      <li
        aria-label="Manitoba"
        aria-selected="false"
        class="c9"
        data-testid="listitem-mb"
        id="listbox_undefined_mb"
        role="option"
        tabindex="-1"
      >
        Manitoba
      </li>
      <li
        aria-label="Saskatchewan"
        aria-selected="false"
        class="c9"
        data-testid="listitem-sk"
        id="listbox_undefined_sk"
        role="option"
        tabindex="-1"
      >
        Saskatchewan
      </li>
      <li
        aria-label="Nova Scotia"
        aria-selected="false"
        class="c9"
        data-testid="listitem-ns"
        id="listbox_undefined_ns"
        role="option"
        tabindex="-1"
      >
        Nova Scotia
      </li>
      <li
        aria-label="New Brunswick"
        aria-selected="false"
        class="c9"
        data-testid="listitem-nb"
        id="listbox_undefined_nb"
        role="option"
        tabindex="-1"
      >
        New Brunswick
      </li>
      <li
        aria-label="Newfoundland and Labrador"
        aria-selected="false"
        class="c9"
        data-testid="listitem-nl"
        id="listbox_undefined_nl"
        role="option"
        tabindex="-1"
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-label="Prince Edward Island"
        aria-selected="false"
        class="c9"
        data-testid="listitem-pe"
        id="listbox_undefined_pe"
        role="option"
        tabindex="-1"
      >
        Prince Edward Island
      </li>
      <li
        aria-label="Northwest Territories"
        aria-selected="false"
        class="c9"
        data-testid="listitem-nt"
        id="listbox_undefined_nt"
        role="option"
        tabindex="-1"
      >
        Northwest Territories
      </li>
      <li
        aria-label="Nunavut"
        aria-selected="false"
        class="c9"
        data-testid="listitem-nu"
        id="listbox_undefined_nu"
        role="option"
        tabindex="-1"
      >
        Nunavut
      </li>
      <li
        aria-label="Yukon"
        aria-selected="false"
        class="c9"
        data-testid="listitem-yt"
        id="listbox_undefined_yt"
        role="option"
        tabindex="-1"
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select invalid select has a different style 1`] = `
[
  .c4 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c6 {
  margin-left: var(--spacing-base);
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0:focus {
  border-color: #CD2C23;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-half);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  width: 100%;
}

.c11 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  list-style-type: none;
  margin: 0;
  max-height: 8rem;
  overflow-y: auto;
  padding: 0;
  position: relative;
  width: 100%;
  z-index: 1000;
}

.c11:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgb(0 0 0 / 19%);
  outline: none;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: 1.43;
  padding: 6px 8px 6px var(--spacing-4x);
}

.c12:hover {
  background-color: #DBDEE1;
}

.c12:focus:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c1 {
  position: relative;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #CD2C23;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c7:hover {
  cursor: pointer;
}

.c7 svg {
  color: #60666E;
}

.c8 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c8:hover {
  cursor: pointer;
}

.c8::-webkit-input-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c8::-moz-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c8:-ms-input-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c8::placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

<div
    class="c0 c1"
  >
    <label
      class="c2 c3"
    >
      Select an option
    </label>
    <div
      aria-live="polite"
      class="c4"
      id="undefined_invalid"
      role="alert"
    >
      <div
        class="c5"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </div>
      <span
        class="c6"
      >
        You must select an option
      </span>
    </div>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="listbox_undefined"
      class="c7"
      data-testid="input-wrapper"
    >
      <input
        aria-autocomplete="list"
        aria-controls="listbox_undefined"
        aria-label="Select an option"
        aria-multiline="false"
        class="c8"
        data-testid="input"
        type="text"
        value=""
      />
      <button
        class="c9"
        data-testid="arrow"
        tabindex="-1"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </div>
    <div
      aria-multiselectable="false"
      class="c10"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c11"
        data-testid="listbox-list"
        id="listbox_undefined"
        role="presentation"
        tabindex="0"
      >
        <li
          aria-label="Ontario"
          aria-selected="false"
          class="c12"
          data-testid="listitem-on"
          id="listbox_undefined_on"
          role="option"
          tabindex="-1"
        >
          Ontario
        </li>
        <li
          aria-label="Quebec"
          aria-selected="false"
          class="c12"
          data-testid="listitem-qc"
          id="listbox_undefined_qc"
          role="option"
          tabindex="-1"
        >
          Quebec
        </li>
        <li
          aria-label="British Columbia"
          aria-selected="false"
          class="c12"
          data-testid="listitem-bc"
          id="listbox_undefined_bc"
          role="option"
          tabindex="-1"
        >
          British Columbia
        </li>
        <li
          aria-label="Alberta"
          aria-selected="false"
          class="c12"
          data-testid="listitem-ab"
          id="listbox_undefined_ab"
          role="option"
          tabindex="-1"
        >
          Alberta
        </li>
        <li
          aria-label="Manitoba"
          aria-selected="false"
          class="c12"
          data-testid="listitem-mb"
          id="listbox_undefined_mb"
          role="option"
          tabindex="-1"
        >
          Manitoba
        </li>
        <li
          aria-label="Saskatchewan"
          aria-selected="false"
          class="c12"
          data-testid="listitem-sk"
          id="listbox_undefined_sk"
          role="option"
          tabindex="-1"
        >
          Saskatchewan
        </li>
        <li
          aria-label="Nova Scotia"
          aria-selected="false"
          class="c12"
          data-testid="listitem-ns"
          id="listbox_undefined_ns"
          role="option"
          tabindex="-1"
        >
          Nova Scotia
        </li>
        <li
          aria-label="New Brunswick"
          aria-selected="false"
          class="c12"
          data-testid="listitem-nb"
          id="listbox_undefined_nb"
          role="option"
          tabindex="-1"
        >
          New Brunswick
        </li>
        <li
          aria-label="Newfoundland and Labrador"
          aria-selected="false"
          class="c12"
          data-testid="listitem-nl"
          id="listbox_undefined_nl"
          role="option"
          tabindex="-1"
        >
          Newfoundland and Labrador
        </li>
        <li
          aria-label="Prince Edward Island"
          aria-selected="false"
          class="c12"
          data-testid="listitem-pe"
          id="listbox_undefined_pe"
          role="option"
          tabindex="-1"
        >
          Prince Edward Island
        </li>
        <li
          aria-label="Northwest Territories"
          aria-selected="false"
          class="c12"
          data-testid="listitem-nt"
          id="listbox_undefined_nt"
          role="option"
          tabindex="-1"
        >
          Northwest Territories
        </li>
        <li
          aria-label="Nunavut"
          aria-selected="false"
          class="c12"
          data-testid="listitem-nu"
          id="listbox_undefined_nu"
          role="option"
          tabindex="-1"
        >
          Nunavut
        </li>
        <li
          aria-label="Yukon"
          aria-selected="false"
          class="c12"
          data-testid="listitem-yt"
          id="listbox_undefined_yt"
          role="option"
          tabindex="-1"
        >
          Yukon
        </li>
      </ul>
    </div>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    class="c0"
    data-testid="select-skip-option"
    name="undefined_skip"
    type="radio"
    value="skip"
  />,
  .c1 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c1:hover {
  background: #DBDEE1;
  border-color: #DBDEE1;
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c1 {
  background: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c1 {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c1 {
  background: #F1F2F2;
  border-color: #DBDEE1;
  color: #B7BBC2;
  cursor: auto;
}

.c1 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c1 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    class="c0 c1"
  >
    Skip this question
  </label>,
]
`;

exports[`Select matches the snapshot 1`] = `
[
  .c3 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  width: 100%;
}

.c8 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  list-style-type: none;
  margin: 0;
  max-height: 8rem;
  overflow-y: auto;
  padding: 0;
  position: relative;
  width: 100%;
  z-index: 1000;
}

.c8:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgb(0 0 0 / 19%);
  outline: none;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: 1.43;
  padding: 6px 8px 6px var(--spacing-4x);
}

.c9:hover {
  background-color: #DBDEE1;
}

.c9:focus:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c1 {
  position: relative;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2rem;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: pointer;
}

.c4 svg {
  color: #60666E;
}

.c5 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c5:hover {
  cursor: pointer;
}

.c5::-webkit-input-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c5::-moz-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c5:-ms-input-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c5::placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

<div
    class="c0 c1"
  >
    <label
      class="c2 c3"
    >
      Select an option
    </label>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="listbox_undefined"
      class="c4"
      data-testid="input-wrapper"
    >
      <input
        aria-autocomplete="list"
        aria-controls="listbox_undefined"
        aria-label="Select an option"
        aria-multiline="false"
        class="c5"
        data-testid="input"
        type="text"
        value=""
      />
      <button
        class="c6"
        data-testid="arrow"
        tabindex="-1"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </div>
    <div
      aria-multiselectable="false"
      class="c7"
      role="listbox"
      tabindex="-1"
    >
      <ul
        class="c8"
        data-testid="listbox-list"
        id="listbox_undefined"
        role="presentation"
        tabindex="0"
      >
        <li
          aria-label="Ontario"
          aria-selected="false"
          class="c9"
          data-testid="listitem-on"
          id="listbox_undefined_on"
          role="option"
          tabindex="-1"
        >
          Ontario
        </li>
        <li
          aria-label="Quebec"
          aria-selected="false"
          class="c9"
          data-testid="listitem-qc"
          id="listbox_undefined_qc"
          role="option"
          tabindex="-1"
        >
          Quebec
        </li>
        <li
          aria-label="British Columbia"
          aria-selected="false"
          class="c9"
          data-testid="listitem-bc"
          id="listbox_undefined_bc"
          role="option"
          tabindex="-1"
        >
          British Columbia
        </li>
        <li
          aria-label="Alberta"
          aria-selected="false"
          class="c9"
          data-testid="listitem-ab"
          id="listbox_undefined_ab"
          role="option"
          tabindex="-1"
        >
          Alberta
        </li>
        <li
          aria-label="Manitoba"
          aria-selected="false"
          class="c9"
          data-testid="listitem-mb"
          id="listbox_undefined_mb"
          role="option"
          tabindex="-1"
        >
          Manitoba
        </li>
        <li
          aria-label="Saskatchewan"
          aria-selected="false"
          class="c9"
          data-testid="listitem-sk"
          id="listbox_undefined_sk"
          role="option"
          tabindex="-1"
        >
          Saskatchewan
        </li>
        <li
          aria-label="Nova Scotia"
          aria-selected="false"
          class="c9"
          data-testid="listitem-ns"
          id="listbox_undefined_ns"
          role="option"
          tabindex="-1"
        >
          Nova Scotia
        </li>
        <li
          aria-label="New Brunswick"
          aria-selected="false"
          class="c9"
          data-testid="listitem-nb"
          id="listbox_undefined_nb"
          role="option"
          tabindex="-1"
        >
          New Brunswick
        </li>
        <li
          aria-label="Newfoundland and Labrador"
          aria-selected="false"
          class="c9"
          data-testid="listitem-nl"
          id="listbox_undefined_nl"
          role="option"
          tabindex="-1"
        >
          Newfoundland and Labrador
        </li>
        <li
          aria-label="Prince Edward Island"
          aria-selected="false"
          class="c9"
          data-testid="listitem-pe"
          id="listbox_undefined_pe"
          role="option"
          tabindex="-1"
        >
          Prince Edward Island
        </li>
        <li
          aria-label="Northwest Territories"
          aria-selected="false"
          class="c9"
          data-testid="listitem-nt"
          id="listbox_undefined_nt"
          role="option"
          tabindex="-1"
        >
          Northwest Territories
        </li>
        <li
          aria-label="Nunavut"
          aria-selected="false"
          class="c9"
          data-testid="listitem-nu"
          id="listbox_undefined_nu"
          role="option"
          tabindex="-1"
        >
          Nunavut
        </li>
        <li
          aria-label="Yukon"
          aria-selected="false"
          class="c9"
          data-testid="listitem-yt"
          id="listbox_undefined_yt"
          role="option"
          tabindex="-1"
        >
          Yukon
        </li>
      </ul>
    </div>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    class="c0"
    data-testid="select-skip-option"
    name="undefined_skip"
    type="radio"
    value="skip"
  />,
  .c1 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c1:hover {
  background: #DBDEE1;
  border-color: #DBDEE1;
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c1 {
  background: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c1 {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c1 {
  background: #F1F2F2;
  border-color: #DBDEE1;
  color: #B7BBC2;
  cursor: auto;
}

.c1 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c1 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    class="c0 c1"
  >
    Skip this question
  </label>,
]
`;

exports[`Select mobile select has a different style 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  width: 100%;
}

.c6 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  list-style-type: none;
  margin: 0;
  max-height: 10rem;
  overflow-y: auto;
  padding: 0;
  position: relative;
  width: 100%;
  z-index: 1000;
}

.c6:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgb(0 0 0 / 19%);
  outline: none;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.5;
  padding: 4px 16px 4px var(--spacing-5x);
}

.c7:hover {
  background-color: #DBDEE1;
}

.c7:focus:not(:hover) {
  border: 2px solid #006296;
  outline: none;
}

.c1 {
  position: relative;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c2:hover {
  cursor: pointer;
}

.c2 svg {
  color: #60666E;
}

.c3 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 1rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
  font-size: 1rem;
}

.c3::-moz-placeholder {
  color: #60666E;
  font-size: 1rem;
}

.c3:-ms-input-placeholder {
  color: #60666E;
  font-size: 1rem;
}

.c3::placeholder {
  color: #60666E;
  font-size: 1rem;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

<div
  class="c0 c1"
>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="listbox_undefined"
    class="c2"
    data-testid="input-wrapper"
  >
    <input
      aria-autocomplete="list"
      aria-controls="listbox_undefined"
      aria-label="Select an option"
      aria-multiline="false"
      class="c3"
      data-testid="input"
      type="text"
      value=""
    />
    <button
      class="c4"
      data-testid="arrow"
      tabindex="-1"
      type="button"
    >
      <svg
        color="currentColor"
        focusable="false"
        height="24"
        width="24"
      />
    </button>
  </div>
  <div
    aria-multiselectable="false"
    class="c5"
    role="listbox"
    tabindex="-1"
  >
    <ul
      class="c6"
      data-testid="listbox-list"
      id="listbox_undefined"
      role="presentation"
      tabindex="0"
    >
      <li
        aria-label="Ontario"
        aria-selected="false"
        class="c7"
        data-testid="listitem-on"
        id="listbox_undefined_on"
        role="option"
        tabindex="-1"
      >
        Ontario
      </li>
      <li
        aria-label="Quebec"
        aria-selected="false"
        class="c7"
        data-testid="listitem-qc"
        id="listbox_undefined_qc"
        role="option"
        tabindex="-1"
      >
        Quebec
      </li>
      <li
        aria-label="British Columbia"
        aria-selected="false"
        class="c7"
        data-testid="listitem-bc"
        id="listbox_undefined_bc"
        role="option"
        tabindex="-1"
      >
        British Columbia
      </li>
      <li
        aria-label="Alberta"
        aria-selected="false"
        class="c7"
        data-testid="listitem-ab"
        id="listbox_undefined_ab"
        role="option"
        tabindex="-1"
      >
        Alberta
      </li>
      <li
        aria-label="Manitoba"
        aria-selected="false"
        class="c7"
        data-testid="listitem-mb"
        id="listbox_undefined_mb"
        role="option"
        tabindex="-1"
      >
        Manitoba
      </li>
      <li
        aria-label="Saskatchewan"
        aria-selected="false"
        class="c7"
        data-testid="listitem-sk"
        id="listbox_undefined_sk"
        role="option"
        tabindex="-1"
      >
        Saskatchewan
      </li>
      <li
        aria-label="Nova Scotia"
        aria-selected="false"
        class="c7"
        data-testid="listitem-ns"
        id="listbox_undefined_ns"
        role="option"
        tabindex="-1"
      >
        Nova Scotia
      </li>
      <li
        aria-label="New Brunswick"
        aria-selected="false"
        class="c7"
        data-testid="listitem-nb"
        id="listbox_undefined_nb"
        role="option"
        tabindex="-1"
      >
        New Brunswick
      </li>
      <li
        aria-label="Newfoundland and Labrador"
        aria-selected="false"
        class="c7"
        data-testid="listitem-nl"
        id="listbox_undefined_nl"
        role="option"
        tabindex="-1"
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-label="Prince Edward Island"
        aria-selected="false"
        class="c7"
        data-testid="listitem-pe"
        id="listbox_undefined_pe"
        role="option"
        tabindex="-1"
      >
        Prince Edward Island
      </li>
      <li
        aria-label="Northwest Territories"
        aria-selected="false"
        class="c7"
        data-testid="listitem-nt"
        id="listbox_undefined_nt"
        role="option"
        tabindex="-1"
      >
        Northwest Territories
      </li>
      <li
        aria-label="Nunavut"
        aria-selected="false"
        class="c7"
        data-testid="listitem-nu"
        id="listbox_undefined_nu"
        role="option"
        tabindex="-1"
      >
        Nunavut
      </li>
      <li
        aria-label="Yukon"
        aria-selected="false"
        class="c7"
        data-testid="listitem-yt"
        id="listbox_undefined_yt"
        role="option"
        tabindex="-1"
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;
